Codificação da  tela de lançamento

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TrocaTela">
         <activity
+            android:name=".ConfirmarActivity"
+            android:exported="false" />
+        <activity
             android:name=".LancamentoActivity"
             android:exported="false" />
         <activity
